# portfolio

./: .gitignore  pyproject.toml
.github/workflows/: weather-dashboard.yml
bash-scripting/scripts/: analyze_logs.sh
bash_scripting/: .gitignore  README.md
bash_scripting/01_logs/: analyze_logs.sh  analyze_logs_cusorized.sh
bash_scripting/scripts/: analyze_logs_cursorized.sh
career-agent-chatbot/: .gitignore  README.md  chatbot.py
career-agent-chatbot/me/: careerprofile.txt  interview_c.txt
ci-cd/weather-dashboard/: README.md
cicd/: cicd_pipeline.md  project_sketch.md  weather-dashboard_chunks.md
cicd/weather-dashboard/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
cicd/weather-dashboard/app/: app.py  requirements.txt
cicd/weather-dashboard/app/tests/: conftest.py  test_health.py  test_weather.py
cicd/weather-dashboard/k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml  servicemonitor.yaml
cicd/weather-dashboard/observability/: README.md  grafana-dashboard-weather.json
cicd/weather-dashboard/scripts/: k3s-agent-install.sh  k3s-bootstrap.md  k3s-server-install.sh
cicd/weather-dashboard/terraform/: README.md  compute.tf  locals.tf  network.tf  outputs.tf  variables.tf  versions.tf
qlik-sense/: .README.md  .gitignore  README.md
qlik-sense/ncr/: NCRs.xlsx
qlik-sense/udemy-course/: Currency.xlsx  ForeignExchangeRates.xlsx  eCommerce_DataSourceAnalysis.xlsx  eCommerce_Initial_DataSourceRequirements (1).xlsx
r4ds/: README.md
r4ds/ch01_penguin_dimensions/: ch01_README.md  ch01_penguin_dimensions_viz.R
(+20 files in other folders)
